--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ img {
 
 button {
     cursor: pointer;
+    background: none;
 }
 
 .container {
@@ -75,10 +76,6 @@ button {
 
 .list-item a:hover {
     color: #1abc9c;
-}
-
-.main-container {
-    padding-bottom: 100px;
 }
 
 .slider {
@@ -159,4 +156,173 @@ button {
     width: 164px;
     margin: 28px auto 92px;
     border-top: solid 6px #1abc9c;
+}
+
+.new-collection {
+    background-color: rgb(233, 240, 253);
+    padding-top: 96px;
+    padding-bottom: 100px;
+}
+
+.product a {
+    display: block;
+}
+
+.product {
+    float: left;
+    margin-right: 30px;
+    width: 255px;
+    background-color: rgb(233, 240, 253);
+}
+
+.product:last-child {
+    margin-right: 0;
+}
+
+.about-product {
+    background-color: #323232;
+}
+
+.product:hover .about-product {
+    background-color: #1abc9c;
+}
+
+.product:hover .overlay {
+    display: block;
+}
+
+.about-product-info {
+    color: #ffffff;
+    font:  900 18px/32px "Roboto", sans-serif;
+    letter-spacing: -0.02em;
+    text-transform: uppercase;
+}
+
+.product-name {
+    float: left;
+    padding: 7px 0 5px 14px;
+}
+
+.product-price {
+    float: right;
+    background-color: rgba(255, 255, 255, 0.439);
+    padding: 7px 14px 5px;
+}
+
+.img-product-wrapper {
+    position: relative;
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .549);
+    border: solid 10px rgba(255, 255, 255, .549);
+    background-clip: padding-box;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+}
+
+.btn-product {
+    width: 166px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.btn-row {
+    float: left;
+    width: 50px;
+    height: 50px;
+    border: solid 1px #ffffff;
+    margin-right: 8px;
+    margin-bottom: 8px;
+}
+
+.heart {
+    background: url("../img/icons/heart.png") no-repeat center;
+}
+
+.arrows {
+    background: url("../img/icons/arrows.png") no-repeat center;
+}
+
+.clock {
+    margin-right: 0;
+    background: url("../img/icons/clock.png") no-repeat center;
+}
+
+.basket {
+    width: 100%;
+    border: solid 1px #ffffff;
+    margin-top: 14px;
+    padding: 12px 14px;
+    background-color: #323232;
+    display: block;
+}
+
+.basket::before {
+    content: "";
+    background: url("../img/icons/basket.png") no-repeat center;
+    display: block;
+    width: 30px;
+    height: 30px;
+    float: left;
+}
+
+.add-product {
+    color: #ffffff;
+    font: 400 14px/1.2 "Open+Sans", sans-serif;
+    text-transform: uppercase;
+    float: right;
+    margin-top: 8px;
+}
+
+.btn-change-bg-state:hover {
+    background-color: #1abc9c;
+    border: solid 1px #1abc9c;
+}
+
+.footer {
+    background-color: #323232;
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
+
+.footer-container {
+    max-width: 396px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.footer-text {
+    color: #ffffff;
+    font: 400 16px/28px "Open+Sans", sans-serif;
+    text-transform: capitalize;
+}
+
+.footer-text-left {
+    float: left;
+}
+
+.footer-text-left::after {
+    content: "";
+    display: block;
+    background-color: #ffffff;
+    width: 2px;
+    height: 16px;
+    float: right;
+    margin-left: 6px;
+    margin-top: 5px;
+}
+
+.footer-designed-link {
+    color: #46bfa9;
+}
+
+.footer-text-right {
+    float: right;
 }
